--- a/components/Map/PlaceInfoPopUp.css
+++ b/components/Map/PlaceInfoPopUp.css
@@ -1,22 +1,24 @@
 .custom-popup .mapboxgl-popup-close-button {
-    font-size: 24px;
-    padding: 8px;
-    width: 32px;
-    height: 32px;
-    line-height: 16px;
-    color: #4B5563;
-    background: transparent;
-    border: none;
-    cursor: pointer;
-    right: 4px;
-    top: 4px;
-  }
-  
-  .custom-popup .mapboxgl-popup-close-button:hover {
-    background-color: rgba(0, 0, 0, 0.05);
-    color: #1F2937;
-  }
-  
-  .custom-popup .mapboxgl-popup-content {
-    padding: 0;
-  }
+  font-size: 24px;
+  padding: 8px;
+  width: 32px;
+  height: 32px;
+  line-height: 16px;
+  color: #4B5563;
+  background: transparent;
+  border: none;
+  cursor: pointer;
+  right: 4px;
+  top: 4px;
+}
+
+.custom-popup .mapboxgl-popup-close-button:hover {
+  background-color: rgba(0, 0, 0, 0.05);
+  color: #1F2937;
+}
+
+.custom-popup .mapboxgl-popup-content {
+  padding: 0;
+  border-radius: 12px;
+  box-shadow: 0 10px 25px -5px rgba(0, 0, 0, 0.1), 0 8px 10px -6px rgba(0, 0, 0, 0.1);
+}
