Disable pull to refresh try 2

--- a/app/globals.css
+++ b/app/globals.css
@@ -2,8 +2,8 @@
 @tailwind components;
 @tailwind utilities;
 
-body {
-  overscroll-behavior-y: none;
+html, body {
+  overscroll-behavior: none;
 }
 
 /* Alternative version that still allows clicking but prevents context menu */
