--- a/app/globals.css
+++ b/app/globals.css
@@ -1,7 +1,13 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+:root {
+  --vh: 1vh;
+}
 
+.viewport-height {
+  height: calc(var(--vh, 1vh) * 100);
+}
 
 /* Alternative version that still allows clicking but prevents context menu */
 img {
